# PytorchOCR

./: .gitignore  README.md  convert_params_compute_diff.py  readme.md  requirements.txt  utils.py
config/: cfg_det_db.py  cfg_det_dis.py  cfg_det_pse.py  cfg_rec_crnn_lmdb.py  det_train_db_config.py  det_train_db_config_local.py  rec_train_config.py  rec_train_lmdb_config.py
configs/cls/: cls_mv3.yml
configs/det/: det_mv3_db.yml  det_mv3_east.yml  det_mv3_pse.yml  det_r18_vd_ct.yml  det_r50_db++_icdar15.yml  det_r50_db++_td_tr.yml  det_r50_drrg_ctw.yml  det_r50_vd_db.yml  det_r50_vd_dcn_fce_ctw.yml  det_r50_vd_east.yml  det_r50_vd_pse.yml  det_r50_vd_sast_icdar15.yml  det_r50_vd_sast_totaltext.yml
configs/e2e/: e2e_r50_vd_pg.yml
configs/rec/: rec_d28_can.yml  rec_efficientb3_fpn_pren.yml  rec_icdar15_train.yml  rec_mtb_nrtr.yml  rec_mv3_none_bilstm_ctc.yml  rec_mv3_none_none_ctc.yml  rec_mv3_tps_bilstm_att.yml  rec_mv3_tps_bilstm_ctc.yml  rec_r31_robustscanner.yml  rec_r31_sar.yml  rec_r32_gaspin_bilstm_att.yml  rec_r34_vd_none_bilstm_ctc.yml  rec_r34_vd_none_none_ctc.yml  rec_r34_vd_tps_bilstm_att.yml  rec_r34_vd_tps_bilstm_ctc.yml  rec_r45_abinet.yml  rec_r45_visionlan.yml  rec_r50_fpn_srn.yml  rec_resnet_rfl_att.yml  rec_resnet_rfl_visual.yml  rec_resnet_stn_bilstm_att.yml  rec_satrn.yml  rec_svtrnet.yml  rec_svtrnet_ch.yml  rec_vitstr_none_ce.yml
configs/sr/: sr_telescope.yml  sr_tsrn_transformer_strock.yml
configs/table/: SLANet.yml  SLANet_ch.yml  table_master.yml  table_mv3.yml
datapre/: datapre_utils.py  rec_split_txt.py  txt2txt.py
datasets/: 训练用数据集汇总.md
datasets/alphabets/: enAlphaNumPunc90.txt
datasets/icdar15/: ICDAR15RecDataset.py  __init__.py
doc/: 检测+识别推理.md  检测.md  添加新算法.md  识别.md
examples/: minimum_2stage_inference.py
networks/backbones/: mobilenet_v3.py
padiff/: __init__.py  dump_tools.py  utils.py
padiff/abstracts/: __init__.py  marker.py  proxy_model.py  proxy_parameter.py  proxy_utils.py
padiff/checker/: __init__.py  actions.py  check_params.py  check_report.py  checker_utils.py
padiff/datas/: __init__.py  api_mapping.json  assign_weight.yaml  file_loader.py
padiff/interfaces/: __init__.py  diff_utils.py  interfaces.py
padiff/report/: __init__.py  hooks.py  module_struct.py  report.py
padiff/weight_init/: __init__.py  weights.py
ppocr/losses/: rec_can_loss.py
tests/config/: east_R_50_FPN_1x.yaml  test_config.py
tools/: create_lmdb_dataset.py  create_rec_lmdb_dataset.py  det_infer.py  det_train.py  det_train_disti.py  det_train_pse.py  eval.py  export.py  infer_cls.py  infer_det.py  infer_rec.py  minimum_2stage_inference.py  ocr_infer.py  rec_infer.py  rec_train.py  rec_train_config.py  train.py  train_config.py  train_utils.py  utility.py
tools/infer/: onnx_engine.py  predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  utility.py
torchocr/: __init__.py  config.py  config.py.template
torchocr/config/: README.md  __init__.py  config.py  defaults.py  yacs.py
torchocr/data/: __init__.py  collate_fn.py  lmdb_dataset.py  multi_scale_sampler.py  pgnet_dataset.py  pubtab_dataset.py  simple_dataset.py
torchocr/datasets/: DetCollateFN.py  DetDataSet.py  DetDataSetFce.py  DetDateSetPse.py  RecCollateFn.py  RecDataSet.py  __init__.py  collate_fn.py  训练用数据集汇总.md
torchocr/deprecated/: FeaturePyramidNetwork.py  __init__.py
torchocr/engine/: __init__.py  config.py  trainer.py
trt/dbnet/: CMakeLists.txt  Config.h.in  dbnet_infer.cpp  dbnet_utils.cpp  dbnet_utils.hpp  onnx2trt.py  pytorch2onnx.py
util_scripts/: CreateRecAug.py  Rec_aug.py
(+291 files in other folders)
